# MySHell-msh

./: .gitignore  CMakeLists.txt  README.md
doc/: README.md
src/: main_msh.c
src/include/readline/: readline.h
src/msh_lib/: CMakeLists.txt  msh_basic.c  msh_basic.h  msh_bic.c  msh_bic.h  msh_lib.c  msh_lib.h  msh_sig.c  msh_sig.h
src_ext/: Makefile  main_mcat.c  main_mcp.c  main_mls.c  mcat  mcp  mls
